{
  "version": 4,
  "terraform_version": "1.6.4",
  "serial": 19,
  "lineage": "6d4cbca9-4b3b-05ea-8715-1c7bf4ec2da4",
  "resources": [
    {
      "module": "module.ec2-vm-1",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04c0f9ef2f505b609",
            "arn": "arn:aws:ec2:us-east-1:851725547273:instance/i-04ad64afdd91f27f2",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04ad64afdd91f27f2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-05d837d444fe521d1",
            "private_dns": "ip-10-0-1-182.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.182",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b015daab1ab666d2",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-03c47ccb5003a5bac"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0dcbe7eb95afc1e95",
            "tags": {
              "Name": "ec2-vm-1",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "default",
              "Name": "ec2-vm-1",
              "Owner": "Rack Finance",
              "Provisioned": "Terraform",
              "Terraform": "true"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03c47ccb5003a5bac"
            ]
          },
          "dependencies": [
            "module.ec2-vm-1.data.aws_ami.amazon_linux_2",
            "module.subnet-1.aws_subnet.vpc-cloud-subnet",
            "module.vpc.aws_security_group.vpc-cloud-sg",
            "module.vpc.aws_vpc.vpc-cloud"
          ]
        }
      ]
    },
    {
      "module": "module.ec2-vm-2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04c0f9ef2f505b609",
            "arn": "arn:aws:ec2:us-east-1:851725547273:instance/i-0f92ab6e77110b4e2",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f92ab6e77110b4e2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-040d758d49f684e3d",
            "private_dns": "ip-10-0-2-146.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.146",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-04d415f5a7b61a6ee",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-03c47ccb5003a5bac"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-005b7697cb8821320",
            "tags": {
              "Name": "ec2-vm-2",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "default",
              "Name": "ec2-vm-2",
              "Owner": "Rack Finance",
              "Provisioned": "Terraform",
              "Terraform": "true"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03c47ccb5003a5bac"
            ]
          },
          "dependencies": [
            "module.ec2-vm-2.data.aws_ami.amazon_linux_2",
            "module.subnet-2.aws_subnet.vpc-cloud-subnet",
            "module.vpc.aws_security_group.vpc-cloud-sg",
            "module.vpc.aws_vpc.vpc-cloud"
          ]
        }
      ]
    },
    {
      "module": "module.internet-gateway",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "network_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725547273:internet-gateway/igw-0f34d6ccab62b8ddf",
            "id": "igw-0f34d6ccab62b8ddf",
            "owner_id": "851725547273",
            "tags": {
              "Name": "internet gateway",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "default",
              "Name": "internet gateway",
              "Owner": "Rack Finance",
              "Provisioned": "Terraform",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0bfb60786d1844ea1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc-cloud"
          ]
        }
      ]
    },
    {
      "module": "module.route-tables",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725547273:route-table/rtb-0c497d7420de157d1",
            "id": "rtb-0c497d7420de157d1",
            "owner_id": "851725547273",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f34d6ccab62b8ddf",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "route-tables",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "default",
              "Name": "route-tables",
              "Owner": "Rack Finance",
              "Provisioned": "Terraform",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bfb60786d1844ea1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.internet-gateway.aws_internet_gateway.network_gateway",
            "module.subnet-1.aws_subnet.vpc-cloud-subnet",
            "module.subnet-2.aws_subnet.vpc-cloud-subnet",
            "module.vpc.aws_vpc.vpc-cloud"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725547273:route-table/rtb-04c364b46bc8ae585",
            "id": "rtb-04c364b46bc8ae585",
            "owner_id": "851725547273",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f34d6ccab62b8ddf",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "route-tables",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "default",
              "Name": "route-tables",
              "Owner": "Rack Finance",
              "Provisioned": "Terraform",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bfb60786d1844ea1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.internet-gateway.aws_internet_gateway.network_gateway",
            "module.subnet-1.aws_subnet.vpc-cloud-subnet",
            "module.subnet-2.aws_subnet.vpc-cloud-subnet",
            "module.vpc.aws_vpc.vpc-cloud"
          ]
        }
      ]
    },
    {
      "module": "module.route-tables",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route-table-associations",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0612dce6e3281e354",
            "route_table_id": "rtb-0c497d7420de157d1",
            "subnet_id": "subnet-0dcbe7eb95afc1e95"
          },
          "dependencies": [
            "module.internet-gateway.aws_internet_gateway.network_gateway",
            "module.route-tables.aws_route_table.route-table",
            "module.subnet-1.aws_subnet.vpc-cloud-subnet",
            "module.subnet-2.aws_subnet.vpc-cloud-subnet",
            "module.vpc.aws_vpc.vpc-cloud"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07ab46089f51f91d4",
            "route_table_id": "rtb-04c364b46bc8ae585",
            "subnet_id": "subnet-005b7697cb8821320"
          },
          "dependencies": [
            "module.internet-gateway.aws_internet_gateway.network_gateway",
            "module.route-tables.aws_route_table.route-table",
            "module.subnet-1.aws_subnet.vpc-cloud-subnet",
            "module.subnet-2.aws_subnet.vpc-cloud-subnet",
            "module.vpc.aws_vpc.vpc-cloud"
          ]
        }
      ]
    },
    {
      "module": "module.subnet-1",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "vpc-cloud-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725547273:subnet/subnet-0dcbe7eb95afc1e95",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dcbe7eb95afc1e95",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851725547273",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags_all": {
              "Environment": "default",
              "Owner": "Rack Finance",
              "Provisioned": "Terraform"
            },
            "vpc_id": "vpc-0bfb60786d1844ea1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc-cloud"
          ]
        }
      ]
    },
    {
      "module": "module.subnet-2",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "vpc-cloud-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725547273:subnet/subnet-005b7697cb8821320",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-005b7697cb8821320",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851725547273",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags_all": {
              "Environment": "default",
              "Owner": "Rack Finance",
              "Provisioned": "Terraform"
            },
            "vpc_id": "vpc-0bfb60786d1844ea1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc-cloud"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc-cloud-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725547273:security-group/sg-03c47ccb5003a5bac",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03c47ccb5003a5bac",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow port 80",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow port 80",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "vpc-cloud-sg-default",
            "name_prefix": "",
            "owner_id": "851725547273",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "default",
              "Name": "vpc",
              "Owner": "Rack Finance",
              "Provisioned": "Terraform",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bfb60786d1844ea1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc-cloud"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc-cloud",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725547273:vpc/vpc-0bfb60786d1844ea1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0fd4c75066d561a41",
            "default_route_table_id": "rtb-002d3652029ed01ea",
            "default_security_group_id": "sg-0bae39d0c8a27e76d",
            "dhcp_options_id": "dopt-0eaeb095aea7abb3c",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0bfb60786d1844ea1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-002d3652029ed01ea",
            "owner_id": "851725547273",
            "tags": {
              "Name": "vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "default",
              "Name": "vpc",
              "Owner": "Rack Finance",
              "Provisioned": "Terraform",
              "Terraform": "true"
            }
          }
        }
      ]
    }
  ]
}